[metadata]
name = mujson
author = Matt Giles
author_email = matt.s.giles@gmail.com
license = MIT
description = Use the fastest JSON functions available at import time.
keywords = json
url = https://github.com/mattgiles/mujson
long_description = file: README.md
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
platforms = any

[options]
packages = mujson
zip_safe = False
include_package_data = False

[bdist_wheel]
universal = 1

